[package]
name = "flowchart_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.32.3"
eframe = "0.32.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
env_logger = "0.11.8"
rfd = "0.15.4"
futures = "0.3.31"  # For file dialogs
wasm-bindgen-futures = "0.4.54"  # For file dialogs
piccolo = "0.3.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Document", "HtmlCanvasElement", "Window", "Element", "Request", "RequestInit", "RequestMode", "Response", "Headers"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]