[package]
name = "flowchart_tool"
version = "0.1.6"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
egui = "0.32.3"
eframe = { version = "0.32.3", features = ["persistence"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
env_logger = "0.11.8"
rfd = "0.15.4"
futures = "0.3.31"  # For file dialogs
wasm-bindgen-futures = "0.4.54"  # For file dialogs
boa_engine = "0.19"

getrandom = { version = "0.3.3" , features = ["wasm_js"]}
getrandom2 = { version = "0.2.16", package = "getrandom", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {  version = "1.47.1" , features = ["rt", "macros", "rt-multi-thread"]}


[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Document", "HtmlHeadElement", "HtmlCanvasElement", "Window", "Element", "Request", "RequestInit", "RequestMode", "Response", "Headers", "FileReader", "ProgressEvent", "File"] }
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")']
rustflags = ['--cfg', 'getrandom_backend="wasm_js"'] #, '--cfg', 'getrandom_backend="js"']


[lib]
crate-type = ["cdylib", "rlib"]