[package]
name = "flowchart_tool"
version = "0.1.8"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
egui = "0.33"
eframe = { version = "0.33", features = ["persistence"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde", "js"] }
env_logger = "0.11"
rfd = "0.15"
futures = "0.3"  # For file dialogs
wasm-bindgen-futures = "0.4"  # For file dialogs
boa_engine = "0.19"

getrandom = { version = "0.3", features = ["wasm_js"] }
# We need to include a second copy of `getrandom` so that we can enable the JS flag for the copy of `getrandom` used
# by `boa_engine`.
getrandom2 = { version = "0.2.16", package = "getrandom", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {  version = "1" , features = ["rt", "macros", "rt-multi-thread"]}
resvg = "0.44"
usvg = "0.44"
tiny-skia = "0.11"
fontdb = "0.22"


[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Document",
    "HtmlHeadElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "HtmlImageElement",
    "HtmlAnchorElement",
    "Window",
    "Element",
    "Url",
    "Blob",
    "BlobPropertyBag",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "FileReader",
    "ProgressEvent",
    "File"
] }
js-sys = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]